--- a/src/app/entry/entryResources/entryResources.html
+++ b/src/app/entry/entryResources/entryResources.html
@@ -453,7 +453,7 @@
                     <md-checkbox class="block-input">
                         <md-input-container class="full-width">
                         <input md-input mdInput type="text"
-                        id="resourceEnsemble" 
+                        id="resourceEthnicityOther" 
                         class="form-control" 
                         name="resourceEthnicityEight"
                         [(ngModel)]="submission.data.ethnicities.Other"
